fix form-element button alignment

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -63,9 +63,3 @@ button {
 		color: $info;
 	}
 }
-
-.form-field--add-row-btn {
-	left: 90%;
-	margin-left: 9px;
-	position: relative;
-}
